# mcp-sigstore

./: README.md  pyproject.toml
src/mcp_content_integrity/: __init__.py  server.py
