[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-base64-autodecode"
version = "0.3.0"
description = "Base64 Auto-Decode MCP Server — detect and decode base64 in any text, replace in-place"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
]

[project.scripts]
mcp-base64-autodecode = "mcp_content_integrity.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_content_integrity"]
